2009-08-29  Martin Thuresson  <martin@mtme.org>

	* chew.c (newentry, add_intrinsic): Rename variable new to
	new_d.

2009-08-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.in: Regenerate.

2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (pdf__strip_dir, install-pdf, install-pdf-am)
	(html__strip_dir, install-html, install-html-am): Remove.
	* Makefile.in: Regenerate.

	* Makefile.in: Regenerate.

2009-05-22  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2009-04-22  Anthony Green  <green@moxielogic.com>

	* bfdint.texi (BFD target vector miscellaneous): Mention verilog
	flavour.

2008-11-19  Nick Clifton  <nickc@redhat.com>

	* fdl.texi: Update to v1.3
	* bfd.texinfo: Change license to v1.3.

2008-08-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (chew.o): Delete rule.
	($(MKDOC)): Move options before C file.
	* Makefile.in: Regenerate.

2008-08-15  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2008-07-09  Craig Silverstein  <csilvers@google.com>

	* Makefile.am (BFD_H_DEP): Add ../compress.c.
	* Makefile.in: Regenerate.

2008-05-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.in: Regenerate.

2008-03-13  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2007-10-15  Alan Modra  <amodra@bigpond.net.au>

	* chew.c (write_buffer): Check fwrite return value.

2007-09-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2007-07-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2007-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.in: Likewise.

2007-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.in: Regenerated.

2007-05-22  Nick Clifton  <nickc@redhat.com>

	* bfd.texinfo: Use @copying around the copyright notice.
	* bfdint.texi: Likewise.

2007-05-21  Nick Clifton  <nickc@redhat.com>
