@@ -1,0 +1,6 @@
+2010-08-25  H.J. Lu  <hongjiu.lu@intel.com>
+ 
+	PR ld/11939
+	* elflink.c (elf_link_add_object_symbols): Don't set
+	unique_global for non-ELF hash link table.
+
